<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/selectableItemBackground"
    android:minHeight="72dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/recycler_item_card_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/recycler_item_icon_image_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_description_str"
            android:src="@drawable/ic_faucet"
            app:tint="#FFFFFF" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recycler_item_first_text"
        android:textSize="16sp"
        android:text="@string/recycler_item_first_line_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/recycler_item_card_view"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/material_list_item_tint"/>

    <TextView
        android:id="@+id/recycler_item_meta_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recycler_item_meta_str" />

    <TextView
        android:id="@+id/recycler_item_second_text"
        android:text="@string/recycler_item_second_line_str"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_item_first_text"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/recycler_item_card_view"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="@color/material_list_item_tint"/>

</RelativeLayout>