<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"

        android:background="?android:attr/selectableItemBackground"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_picture_cardView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_picture_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture_nav_header_desc_str"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/access_profile_hint_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:text="@string/access_profile_hint_str"
            android:textColor="?attr/colorPrimary"

            app:layout_constraintBottom_toBottomOf="@+id/profile_picture_cardView"
            app:layout_constraintStart_toEndOf="@+id/profile_picture_cardView"
            app:layout_constraintTop_toTopOf="@+id/profile_picture_cardView" />

        <TextView
            android:id="@+id/navigation_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="0dp"
            android:text="@string/header_name_str"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_cardView" />

        <TextView
            android:id="@+id/navigation_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_email_str"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigation_header_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_rounded_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>
</LinearLayout>