<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_point_barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_point_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:menu="@menu/top_app_bar_add_point"
            app:title="Nouveau Point" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_point_selector_textLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <AutoCompleteTextView
                    android:id="@+id/add_point_selector_textView"
                    android:hint="@string/add_point_form_category_str"
                    android:labelFor="@id/add_point_selector_textLayout"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_point_name_textLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/add_point_form_name_str">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_point_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_point_price_textLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:suffixText="€"
                android:hint="@string/add_point_price_hint_str">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_point_price_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/default_price_editText_str"
                    android:textDirection="firstStrongLtr"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/add_point_picture_layout"

                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"

                android:background="@drawable/form_background">

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_point_picture_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/add_point_picture_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/add_point_picture_imageView_desc_str" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="addPictureFieldClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_photo_alternate_32"
                        app:tint="#99000000"
                        android:contentDescription="@string/add_point_picture_icon_imageView_desc_str" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"

                        android:gravity="center"
                        android:text="@string/add_point_picture_textView_str"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:textSize="16sp"
                        android:textColor="#99000000"/>
                </LinearLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/point_location_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/add_point_form_location_str"

                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_gps"
                app:endIconContentDescription="Get position icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/point_location_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:inputType="none"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="10dp"
                app:buttonTint="@color/colorPrimary"
                android:text="@string/i_am_storekeeper_str"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
