<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/recycler_item_first_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/recycler_item_problem_delete_imageView"
        android:layout_marginEnd="16dp"

        android:textSize="16sp"
        android:text="@string/recycler_item_first_line_str"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/material_list_item_tint"/>

    <TextView
        android:id="@+id/recycler_item_second_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        android:layout_below="@id/recycler_item_first_text"
        android:layout_gravity="center_vertical"
        android:layout_toStartOf="@id/recycler_item_problem_delete_imageView"

        android:text="@string/recycler_item_second_line_str"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="@color/material_list_item_tint"/>

    <ImageView
        android:id="@+id/recycler_item_problem_delete_imageView"

        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"

        android:src="@drawable/ic_baseline_close_24"
        android:contentDescription="@string/check_icon_city_recycler_item"
        app:tint="@color/colorPrimary" />

</RelativeLayout>