<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/bottom_sheet_layout"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottom_sheet_close_line"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/bottom_sheet_close_line"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_add_picture_textView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_close_line"

        android:text="@string/bottom_sheet_add_picture_str"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_add_picture_textView" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="128dp"

                android:orientation="vertical"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"

                android:onClick="appPhotoBtnClick"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/bottom_sheet_apn_imageView"
                    style="@style/BottomSheet.GridItemImage"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:src="@drawable/ic_baseline_photo_camera_48"
                    android:contentDescription="@string/bottom_sheet_apn_desc_str"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/bottom_sheet_apn_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bottom_sheet_apn_str" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="128dp"

                android:orientation="vertical"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"

                android:onClick="galleryBtnClick"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/bottom_sheet_gallery_imageView"
                    style="@style/BottomSheet.GridItemImage"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:src="@drawable/ic_baseline_image_48"
                    android:contentDescription="@string/bottom_sheet_gallery_desc_str"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/bottom_sheet_gallery_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bottom_sheet_gallery_str" />
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>